Fix mobile nav overflow issues

--- a/spritesanddice/static/scss/main/navigation/navbar.scss
+++ b/spritesanddice/static/scss/main/navigation/navbar.scss
@@ -10,6 +10,10 @@ nav.navbar {
 
 	.grid {
 		height: 100%;
+
+		.main-menu {
+			overflow-x: scroll;
+		}
 	}
 
 	ul {
